three-tier-application/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: frontend
          image: ghcr.io/sysadmin29/front-end:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"      
#            - secretRef:
#                name: frontend-secrets
      imagePullSecrets:
        - name: github-container-registry
