three-tier-application/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
